<resources>
    <string name="app_name">Smart Table</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_homework_detail">Activity_Homeworkdetail</string>
    <string name="title_activity_test_detail">Activity_Testdetail</string>
    <string name="title_activity_create_homework">Activity_CreateHomework</string>
    <string name="title_activity_create_test">Activity_CreateTest</string>
    <string name="title_activity_timetable">Activity_Timetable</string>

    <string name="title_add_homework_dialog">Create Homework</string>
    <string name="title_confirm_delete_dialog">Are you sure?</string>
    <string name="title_details">Details</string>

    <string name="action_done">Done</string>
    <string name="action_edit">Edit</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>

    <string name="label_date_monday">MON</string>
    <string name="label_date_tuesday">TUE</string>
    <string name="label_date_wednesday">WED</string>
    <string name="label_date_thursday">THU</string>
    <string name="label_date_friday">FRI</string>
    <string name="label_more">…</string>

    <string name="label_preview_subject">SUBJECT</string>
    <string name="label_preview_effort">EFFORT</string>
    <string name="label_preview">PREVIEW</string>
    <string name="label_preview_long">PREVIEW LONG</string>
    <string name="label_preview_name">NAME</string>
    <string name="label_preview_teacher">TEACHER</string>
    <string name="label_preview_task">TASK</string>
    <string name="label_preview_date">DATE</string>
    <string name="label_preview_category">CATEGORY</string>
    <string name="label_preview_topic">TOPIC</string>

    <string name="content_description_delete_icon">Delete icon</string>
    <string name="title_activity__settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="label_preview_timespan">TIMESPAN</string>
    <string name="title_activity__delete_subject">Activity_DeleteSubject</string>
    <string name="title_activity_edit_homework">EditHomeworkActivity</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task">Task</string>
    <string name="subject">Subject</string>
    <string name="topic">Topic</string>
    <string name="lbl_btn_set">SET</string>
    <string name="content_description_edit_icon">Edit Icon</string>
    <string name="label_hint_date">Date</string>
    <string name="label_date_start_hint">Start Date</string>
    <string name="label_hint_deadline">Deadline</string>
    <string name="label_homework_finished">Homework finished</string>
    <string name="label_hint_effort">Effort</string>
</resources>
