<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp">

    <TextView
        android:id="@+id/item_homework_subject"
        style="@style/AppTheme.PrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_preview_subject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_homework_task"
        style="@style/AppTheme.PrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/label_preview_task"
        app:layout_constraintStart_toEndOf="@id/item_homework_subject"
        app:layout_constraintTop_toTopOf="@id/item_homework_subject" />

    <TextView
        android:id="@+id/item_homework_deadline"
        style="@style/AppTheme.SecondaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_preview_date"
        app:layout_constraintStart_toStartOf="@id/item_homework_subject"
        app:layout_constraintTop_toBottomOf="@id/item_homework_subject" />

    <ImageView
        android:id="@+id/item_homework_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description_edit_icon"
        app:srcCompat="@drawable/ic_mode_edit_dark_24px"
        app:layout_constraintBottom_toBottomOf="@id/item_homework_deadline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/item_homework_subject" />

</android.support.constraint.ConstraintLayout>