<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView
        android:id="@+id/timetable_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/timetable_days_layout"
        style="@style/AppTheme.Timetable.Tabbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">


        <Button
            android:id="@+id/timetable_mon"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_date_monday"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/timetable_tue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/timetable_tue"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_date_tuesday"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/timetable_wed"
            app:layout_constraintStart_toEndOf="@id/timetable_mon"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/timetable_wed"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_date_wednesday"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/timetable_thu"
            app:layout_constraintStart_toEndOf="@id/timetable_tue"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/timetable_thu"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_date_thursday"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/timetable_fri"
            app:layout_constraintStart_toEndOf="@id/timetable_wed"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/timetable_fri"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_date_friday"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/timetable_thu"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/timetable_more"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/label_more"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>