<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp">

        <TextView
            android:id="@+id/edithomework_lbl_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/edithomework_subject"
            style="@android:style/Widget.Material.Spinner.Underlined"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:minWidth="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edithomework_lbl_subject"
            tools:targetApi="lollipop" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edithomework_layout_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edithomework_subject">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edithomework_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task" />
        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/edithomework_date_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/label_date_start_hint"
            android:inputType="date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edithomework_layout_task" />

        <Button
            android:id="@+id/edithomework_btn_date_start"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/lbl_btn_set"
            app:layout_constraintBottom_toBottomOf="@+id/edithomework_date_start"
            app:layout_constraintStart_toEndOf="@+id/edithomework_date_start"
            app:layout_constraintTop_toTopOf="@+id/edithomework_date_start" />

        <EditText
            android:id="@+id/edithomework_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/label_hint_deadline"
            android:inputType="date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edithomework_date_start" />

        <Button
            android:id="@+id/edithomework_btn_deadline"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/lbl_btn_set"
            app:layout_constraintBottom_toBottomOf="@+id/edithomework_deadline"
            app:layout_constraintStart_toEndOf="@+id/edithomework_deadline"
            app:layout_constraintTop_toTopOf="@+id/edithomework_deadline" />

        <EditText
            android:id="@+id/edithomework_effort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/label_hint_effort"
            android:inputType="time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edithomework_deadline" />

        <Button
            android:id="@+id/edithomework_btn_effort"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/lbl_btn_set"
            app:layout_constraintBottom_toBottomOf="@+id/edithomework_effort"
            app:layout_constraintStart_toEndOf="@+id/edithomework_effort"
            app:layout_constraintTop_toTopOf="@+id/edithomework_effort" />

        <CheckBox
            android:id="@+id/edithomework_finished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_homework_finished"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edithomework_effort" />

        <Button
            android:id="@+id/edithomework_btn_cancel"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/action_cancel"
            app:layout_constraintEnd_toStartOf="@+id/edithomework_btn_save"
            app:layout_constraintTop_toBottomOf="@+id/edithomework_finished" />

        <Button
            android:id="@+id/edithomework_btn_save"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
            android:text="@string/action_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edithomework_btn_cancel" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>

