<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp">


        <Spinner
            android:id="@+id/editexam_subject"
            style="@android:style/Widget.Material.Spinner.Underlined"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:minWidth="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editexam_lbl_subject"
            tools:targetApi="lollipop" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/editexam_layout_topic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editexam_subject">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editexam_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/topic" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/editexam_lbl_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editexam_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Date"
            android:inputType="date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editexam_layout_topic" />

        <Button
            android:id="@+id/editexam_btn_date"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:text="@string/lbl_btn_set"
            app:layout_constraintBottom_toBottomOf="@+id/editexam_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editexam_date"
            app:layout_constraintTop_toTopOf="@+id/editexam_date" />

        <EditText
            android:id="@+id/editexam_grade"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Grade"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@+id/editexam_btn_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editexam_date" />

        <Button
            android:id="@+id/editexam_btn_save"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="SAVE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editexam_grade" />

        <Button
            android:id="@+id/editexam_btn_cancel"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="12dp"
            android:text="CANCEL"
            app:layout_constraintEnd_toStartOf="@+id/editexam_btn_save"
            app:layout_constraintTop_toBottomOf="@+id/editexam_grade" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>

